--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Train With Shubham</a>
+                <a class="navbar-brand" href="#page-top">Pathanpuracha King</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -42,7 +42,7 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">
                     <a href="https://bit.ly/tws-junoon" style="text-decoration: none; color: inherit;">
-                        DevOps (Junoon Batch 8) Starts October 5th (Sat-Sun 9 to 12)
+                        Hanuman Vyayam Shade Jawad
                     </a>
                 </h1>
                 <!-- Icon Divider-->
@@ -52,7 +52,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Engineer - Trainer - Learner</p>
+                <p class="masthead-subheading font-weight-light mb-0">King of Pathanpura</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -83,7 +83,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/kunal.jpg" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -138,14 +138,14 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">DevOps Junoon (Batch 8) <br> Starts October 5th (Weekends 9 A.M to 12 P.M)  <br> Covering A-Z of DevOps.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">See you in the Live Sessions. </p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Balaji ward cha Hanumantya <br> Kharra khate ka  <br> Mast aahe na</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Bhetu udya </p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://bit.ly/tws-junoon">
                         <i class="fas fa-download me-2"></i>
-                        Checkout Junoon!
+                        
                     </a>
                 </div>
             </div>
@@ -256,7 +256,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; TrainWithShubham.com 2024</small></div>
+            <div class="container"><small>Copyright &copy; Kunalpachpor.com 2025</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
@@ -309,7 +309,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/kunal.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
